added more explanation for flag pick

--- a/week_10/Untitled.ipynb
+++ b/week_10/Untitled.ipynb
@@ -13,10 +13,10 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -241,9 +241,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -279,9 +278,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -291,14 +289,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Job <458380> is submitted to queue <general>.\n"
+      "Job <465319> is submitted to queue <general>.\n",
+      "Job <465320> is submitted to queue <general>.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Pseudo-terminal will not be allocated because stdin is not a terminal.\n",
+      "Pseudo-terminal will not be allocated because stdin is not a terminal.\r\n",
       "You are connecting to RIS Compute services.\n",
       "Membership in a compute-* AD group is required.\n",
       "\n",
@@ -313,7 +312,9 @@
     "%%bash\n",
     "ssh beluga\n",
     "\n",
-    "LSF_DOCKER_VOLUMES=/storage1/fs1/bga/Active:/storage1/fs1/bga/Active LSF_DOCKER_PRESERVE_ENVIRONMENT=false bsub -oo vep.log -q general -M 8000000 -R 'select[mem>8000] span[hosts=1] rusage[mem=8000]' -n 8 -G compute-oncology -a 'docker(ensemblorg/ensembl-vep:release_101.0)' /opt/vep/src/ensembl-vep/vep --cache --dir_cache=/storage1/fs1/bga/Active/gmsroot/gc2560/core/cwl/inputs/VEP_cache/ --input_file=mutect.filtered.decomposed.readcount_snvs_indel.vcf.gz --output_file=mutect.filtered.decomposed.readcount_snvs_indel.flag_pick.vcf --everything --fasta=/storage1/fs1/bga/Active/gmsroot/gc2560/core/cwl/inputs/VEP_cache/homo_sapiens/101_GRCh38/Homo_sapiens.GRCh38.dna.toplevel.fa.gz --force_overwrite --vcf --terms SO --assembly=GRCh38 --offline --pick --force_overwrite --no_check_variants_order --transcript_version"
+    "LSF_DOCKER_VOLUMES=/storage1/fs1/bga/Active:/storage1/fs1/bga/Active LSF_DOCKER_PRESERVE_ENVIRONMENT=false bsub -oo vep.log -q general -M 8000000 -R 'select[mem>8000] span[hosts=1] rusage[mem=8000]' -n 8 -G compute-oncology -a 'docker(ensemblorg/ensembl-vep:release_101.0)' /opt/vep/src/ensembl-vep/vep --cache --dir_cache=/storage1/fs1/bga/Active/gmsroot/gc2560/core/cwl/inputs/VEP_cache/ --input_file=mutect.filtered.decomposed.readcount_snvs_indel.vcf.gz --output_file=mutect.filtered.decomposed.readcount_snvs_indel.flag_pick.vcf --everything --fasta=/storage1/fs1/bga/Active/gmsroot/gc2560/core/cwl/inputs/VEP_cache/homo_sapiens/101_GRCh38/Homo_sapiens.GRCh38.dna.toplevel.fa.gz --force_overwrite --vcf --terms SO --assembly=GRCh38 --offline --pick --force_overwrite --no_check_variants_order --fork 4 --transcript_version\n",
+    "\n",
+    "LSF_DOCKER_VOLUMES=/storage1/fs1/bga/Active:/storage1/fs1/bga/Active LSF_DOCKER_PRESERVE_ENVIRONMENT=false bsub -oo vep_nopick.log -q general -M 8000000 -R 'select[mem>8000] span[hosts=1] rusage[mem=8000]' -n 8 -G compute-oncology -a 'docker(ensemblorg/ensembl-vep:release_101.0)' /opt/vep/src/ensembl-vep/vep --cache --dir_cache=/storage1/fs1/bga/Active/gmsroot/gc2560/core/cwl/inputs/VEP_cache/ --input_file=mutect.filtered.decomposed.readcount_snvs_indel.vcf.gz --output_file=mutect.filtered.decomposed.readcount_snvs_indel.no_pick.vcf --everything --fasta=/storage1/fs1/bga/Active/gmsroot/gc2560/core/cwl/inputs/VEP_cache/homo_sapiens/101_GRCh38/Homo_sapiens.GRCh38.dna.toplevel.fa.gz --force_overwrite --vcf --terms SO --assembly=GRCh38 --offline --force_overwrite --no_check_variants_order --fork 4 --transcript_version"
    ]
   },
   {
@@ -331,6 +332,8 @@
     "--terms SO tells VEP to use the sequence ontology to annotate variant consequences i.e. stop_gain, frameshift, etc.\n",
     "\n",
     "--no_check_variants_order means that VEP will be able to run on unsorted input files (though this comes at a significant computational cost)\n",
+    "\n",
+    "--fork is the multi-threading parameter, this will drastically speed up thee runtime\n",
     "\n",
     "and Finally --pick tells VEP to output only 1 entry for a variant, for example you could have a variant that is both a missense variant in one gene and upstream for another gene, using this option VEP will output the most sever consequence, in this case missense\n",
     "\n",
@@ -350,19 +353,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "##VEP=\"v101\" time=\"2020-11-20 21:23:16\" cache=\"/storage1/fs1/bga/Active/gmsroot/gc2560/core/cwl/inputs/VEP_cache/homo_sapiens/101_GRCh38\" ensembl-variation=101.50e7372 ensembl-io=101.943b6c2 ensembl-funcgen=101.b918a49 ensembl=101.856c8e8 1000genomes=\"phase3\" COSMIC=\"90\" ClinVar=\"202003\" ESP=\"V2-SSA137\" HGMD-PUBLIC=\"20194\" assembly=\"GRCh38.p13\" dbSNP=\"153\" gencode=\"GENCODE 35\" genebuild=\"2014-07\" gnomAD=\"r2.1\" polyphen=\"2.2.2\" regbuild=\"1.0\" sift=\"sift5.2.2\"\n",
+      "##VEP=\"v101\" time=\"2020-11-22 04:18:21\" cache=\"/storage1/fs1/bga/Active/gmsroot/gc2560/core/cwl/inputs/VEP_cache/homo_sapiens/101_GRCh38\" ensembl-funcgen=101.b918a49 ensembl=101.856c8e8 ensembl-variation=101.50e7372 ensembl-io=101.943b6c2 1000genomes=\"phase3\" COSMIC=\"90\" ClinVar=\"202003\" ESP=\"V2-SSA137\" HGMD-PUBLIC=\"20194\" assembly=\"GRCh38.p13\" dbSNP=\"153\" gencode=\"GENCODE 35\" genebuild=\"2014-07\" gnomAD=\"r2.1\" polyphen=\"2.2.2\" regbuild=\"1.0\" sift=\"sift5.2.2\"\n",
       "##INFO=<ID=CSQ,Number=.,Type=String,Description=\"Consequence annotations from Ensembl VEP. Format: Allele|Consequence|IMPACT|SYMBOL|Gene|Feature_type|Feature|BIOTYPE|EXON|INTRON|HGVSc|HGVSp|cDNA_position|CDS_position|Protein_position|Amino_acids|Codons|Existing_variation|DISTANCE|STRAND|FLAGS|VARIANT_CLASS|SYMBOL_SOURCE|HGNC_ID|CANONICAL|MANE|TSL|APPRIS|CCDS|ENSP|SWISSPROT|TREMBL|UNIPARC|GENE_PHENO|SIFT|PolyPhen|DOMAINS|miRNA|HGVS_OFFSET|AF|AFR_AF|AMR_AF|EAS_AF|EUR_AF|SAS_AF|AA_AF|EA_AF|gnomAD_AF|gnomAD_AFR_AF|gnomAD_AMR_AF|gnomAD_ASJ_AF|gnomAD_EAS_AF|gnomAD_FIN_AF|gnomAD_NFE_AF|gnomAD_OTH_AF|gnomAD_SAS_AF|MAX_AF|MAX_AF_POPS|CLIN_SIG|SOMATIC|PHENO|PUBMED|VAR_SYNONYMS|MOTIF_NAME|MOTIF_POS|HIGH_INF_POS|MOTIF_SCORE_CHANGE|TRANSCRIPTION_FACTORS\">\n",
       "#CHROM\tPOS\tID\tREF\tALT\tQUAL\tFILTER\tINFO\tFORMAT\tExome_Normal\tExome_Tumor\n",
       "chr17\t445794\t.\tTA\tT\t.\tnormal_artifact;slippage;weak_evidence\tAS_FilterStatus=weak_evidence;AS_SB_TABLE=125%2C10|6%2C1;DP=155;ECNT=1;GERMQ=93;MBQ=30,30;MFRL=0,0;MMQ=60,60;MPOS=20;NALOD=-0.1435;NLOD=15.1;POPAF=6.0;RPA=13,12;RU=A;STR;STRQ=1;TLOD=4.22;CSQ=-|intron_variant|MODIFIER|RFLNB|ENSG00000183688|Transcript|ENST00000329099.4|protein_coding||1/1|ENST00000329099.4:c.104+41del|||||||rs374447131||-1|cds_start_NF|deletion|HGNC|HGNC:28705|YES||1|P1||ENSP00000331915|Q8N5W9||UPI00001AF949|||||||||||||0.1258|0.1229|0.3359|0.2129|0.2914|0.3926|0.2555|0.3054|0.3388|0.3419|0.386|0.3926|gnomAD_ASJ||||||||||\tGT:AD:AF:DP:F1R2:F2R1:SB\t0/0:66,2:0.041:68:4,0:61,2:62,4,2,0\t0/1:0,0:0:0:5,1:62,4:63,6,4,1\n",
@@ -381,6 +384,13 @@
       "Users are responsible for acting in accordance with\n",
       "policies applicable to Washington University St. Louis.\n",
       "\n",
+      "https://confluence.ris.wustl.edu/display/RSUM/RIS+Compute+%3A+User+Agreement\n",
+      "You are connecting to RIS Compute services.\n",
+      "Membership in a compute-* AD group is required.\n",
+      "\n",
+      "Users are responsible for acting in accordance with\n",
+      "policies applicable to Washington University St. Louis.\n",
+      "\n",
       "https://confluence.ris.wustl.edu/display/RSUM/RIS+Compute+%3A+User+Agreement\n"
      ]
     }
@@ -390,8 +400,55 @@
     "cd ~/git/bfx-workshop/week_10\n",
     "\n",
     "scp beluga:~/mutect.filtered.decomposed.readcount_snvs_indel.flag_pick.vcf ./\n",
+    "scp beluga:~/mutect.filtered.decomposed.readcount_snvs_indel.no_pick.vcf ./\n",
     "    \n",
     "grep -A 4 -B 2 \"#CHROM\" mutect.filtered.decomposed.readcount_snvs_indel.flag_pick.vcf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets also take a quick look at the difference running VEP with `--pick` made."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     792\n",
+      "     792\n",
+      "pick\n",
+      "chr17\t5583383\t.\tG\tT\t.\tweak_evidence\tAS_FilterStatus=weak_evidence;AS_SB_TABLE=19%2C0|2%2C0;DP=21;ECNT=1;GERMQ=44;MBQ=30,30;MFRL=0,0;MMQ=60,60;MPOS=4;NALOD=1.0;NLOD=2.71;POPAF=6.0;TLOD=4.02;CSQ=T|intron_variant|MODIFIER|NLRP1|ENSG00000091592|Transcript|ENST00000572272.6|protein_coding||1/16|ENST00000572272.6:c.271+304C>A|||||||||-1||SNV|HGNC|HGNC:14374|YES|NM_033004.4|1|P1|CCDS42246.1|ENSP00000460475|Q9C000||UPI0000038309|1||||||||||||||||||||||||||||||||||\tGT:AD:AF:DP:F1R2:F2R1:SB\t0/0:9,0:0.091:9:0,0:9,0:9,0,0,0\t0/1:0,0:0.0:0:0,0:10,2:10,0,2,0\n",
+      "no pick\n",
+      "chr17\t5583383\t.\tG\tT\t.\tweak_evidence\tAS_FilterStatus=weak_evidence;AS_SB_TABLE=19%2C0|2%2C0;DP=21;ECNT=1;GERMQ=44;MBQ=30,30;MFRL=0,0;MMQ=60,60;MPOS=4;NALOD=1.0;NLOD=2.71;POPAF=6.0;TLOD=4.02;CSQ=T|intron_variant|MODIFIER|NLRP1|ENSG00000091592|Transcript|ENST00000262467.10|protein_coding||1/15|ENST00000262467.10:c.271+304C>A|||||||||-1||SNV|HGNC|HGNC:14374|||5||CCDS32537.1|ENSP00000262467|Q9C000||UPI00005B2E06|1||||||||||||||||||||||||||||||||||,T|intron_variant|MODIFIER|NLRP1|ENSG00000091592|Transcript|ENST00000269280.8|protein_coding||2/16|ENST00000269280.8:c.271+304C>A|||||||||-1||SNV|HGNC|HGNC:14374|||1||CCDS42245.1|ENSP00000269280|Q9C000||UPI000002AEC7|1||||||||||||||||||||||||||||||||||,T|intron_variant|MODIFIER|NLRP1|ENSG00000091592|Transcript|ENST00000345221.7|protein_coding||2/16|ENST00000345221.7:c.271+304C>A|||||||||-1||SNV|HGNC|HGNC:14374|||5||CCDS42245.1|ENSP00000324366|Q9C000||UPI000002AEC7|1||||||||||||||||||||||||||||||||||,T|intron_variant|MODIFIER|NLRP1|ENSG00000091592|Transcript|ENST00000354411.7|protein_coding||1/15|ENST00000354411.7:c.271+304C>A|||||||||-1||SNV|HGNC|HGNC:14374|||1||CCDS42244.1|ENSP00000346390|Q9C000||UPI000002AEC9|1||||||||||||||||||||||||||||||||||,T|intron_variant&NMD_transcript_variant|MODIFIER|NLRP1|ENSG00000091592|Transcript|ENST00000544378.6|nonsense_mediated_decay||1/16|ENST00000544378.6:c.271+304C>A|||||||||-1||SNV|HGNC|HGNC:14374|||2||CCDS32537.1|ENSP00000442029|Q9C000||UPI00005B2E06|1||||||||||||||||||||||||||||||||||,T|intron_variant&non_coding_transcript_variant|MODIFIER|NLRP1|ENSG00000091592|Transcript|ENST00000571307.1|processed_transcript||2/13|ENST00000571307.1:n.637+304C>A|||||||||-1||SNV|HGNC|HGNC:14374|||1|||||||1||||||||||||||||||||||||||||||||||,T|intron_variant|MODIFIER|NLRP1|ENSG00000091592|Transcript|ENST00000571451.6|protein_coding||1/15|ENST00000571451.6:c.271+304C>A|||||||||-1||SNV|HGNC|HGNC:14374|||1||CCDS42245.1|ENSP00000459661|Q9C000||UPI000002AEC7|1||||||||||||||||||||||||||||||||||,T|downstream_gene_variant|MODIFIER|NLRP1|ENSG00000091592|Transcript|ENST00000572143.1|processed_transcript|||||||||||634|-1||SNV|HGNC|HGNC:14374|||4|||||||1||||||||||||||||||||||||||||||||||,T|intron_variant|MODIFIER|NLRP1|ENSG00000091592|Transcript|ENST00000572272.6|protein_coding||1/16|ENST00000572272.6:c.271+304C>A|||||||||-1||SNV|HGNC|HGNC:14374|YES|NM_033004.4|1|P1|CCDS42246.1|ENSP00000460475|Q9C000||UPI0000038309|1||||||||||||||||||||||||||||||||||,T|downstream_gene_variant|MODIFIER|NLRP1|ENSG00000091592|Transcript|ENST00000576905.5|protein_coding|||||||||||468|-1|cds_end_NF|SNV|HGNC|HGNC:14374|||4|||ENSP00000458303||I3L0S2|UPI00025A2D79|1||||||||||||||||||||||||||||||||||,T|intron_variant|MODIFIER|NLRP1|ENSG00000091592|Transcript|ENST00000577119.5|protein_coding||1/14|ENST00000577119.5:c.271+304C>A|||||||||-1||SNV|HGNC|HGNC:14374|||1||CCDS58508.1|ENSP00000460216|Q9C000||UPI000002AEC8|1||||||||||||||||||||||||||||||||||,T|intron_variant|MODIFIER|NLRP1|ENSG00000091592|Transcript|ENST00000613500.4|protein_coding||2/16|ENST00000613500.4:c.271+304C>A|||||||||-1||SNV|HGNC|HGNC:14374|||5||CCDS32537.1|ENSP00000483359|Q9C000||UPI00005B2E06|1||||||||||||||||||||||||||||||||||,T|intron_variant|MODIFIER|NLRP1|ENSG00000091592|Transcript|ENST00000617618.4|protein_coding||2/17|ENST00000617618.4:c.271+304C>A|||||||||-1||SNV|HGNC|HGNC:14374|||5|P1|CCDS42246.1|ENSP00000478516|Q9C000||UPI0000038309|1||||||||||||||||||||||||||||||||||,T|intron_variant|MODIFIER|NLRP1|ENSG00000091592|Transcript|ENST00000619223.4|protein_coding||2/16|ENST00000619223.4:c.271+304C>A|||||||||-1||SNV|HGNC|HGNC:14374|||5||CCDS42244.1|ENSP00000484692|Q9C000||UPI000002AEC9|1||||||||||||||||||||||||||||||||||,T|regulatory_region_variant|MODIFIER|||RegulatoryFeature|ENSR00000548013|promoter||||||||||||||SNV||||||||||||||||||||||||||||||||||||||||||||||\tGT:AD:AF:DP:F1R2:F2R1:SB\t0/0:9,0:0.091:9:0,0:9,0:9,0,0,0\t0/1:0,0:0.0:0:0,0:10,2:10,0,2,0\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "cat mutect.filtered.decomposed.readcount_snvs_indel.flag_pick.vcf | grep -v \"#\" | wc -l\n",
+    "cat mutect.filtered.decomposed.readcount_snvs_indel.no_pick.vcf | grep -v \"#\" | wc -l\n",
+    "\n",
+    "echo \"pick\"\n",
+    "grep \"chr17\\t5583383\" mutect.filtered.decomposed.readcount_snvs_indel.flag_pick.vcf\n",
+    "echo \"no pick\"\n",
+    "grep \"chr17\\t5583383\" mutect.filtered.decomposed.readcount_snvs_indel.no_pick.vcf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see, with without the `--pick` flag we get far more results/consequences for a specific variant. Though these results are added on a single line, a nuiance of outputting in VCF format. I generally always run with `--pick` but there could be situations in where you would want more thourough results."
    ]
   },
   {
@@ -620,7 +677,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -792,13 +853,6 @@
     "vcfData <- cbind(vcfData, vepAnnotations)\n",
     "vcfData"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
