Update prereq notebook.

--- a/lectures/week_01/bfx_workshop_01_overview.ipynb
+++ b/lectures/week_01/bfx_workshop_01_overview.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# BFX Workshop Prerequisite Review\n",
     "\n",
-    "Welcome back to the Fall 2020 and Spring 2021 Bioinformatics (BFX) Workshop. \n"
+    "Welcome back to the Fall 2021 and Spring 2022 Bioinformatics (BFX) Workshop. \n"
    ]
   },
   {
@@ -17,11 +17,13 @@
     "\n",
     "Whether on a macOS or Linux operating system, the Unix family of operating systems all have a similar look and feel. There are standard commands for navigating a filesystem and utilities for performing common tasks on files and directories. This workshop does not specifically cover Unix commands, but a few good resources:\n",
     "\n",
-    "LinkedIn Learning is Free to all WUSTL faculty, students and staff. Although several years old and designed for Max OS X, not much has changed with Unix. [This](https://www.linkedin.com/learning/unix-for-mac-os-x-users) video tutorial should be easy to follow along on a macOS.\n",
-    "\n",
-    "For traditional users, the classic look and feel of [this](http://www.ee.surrey.ac.uk/Teaching/Unix/unixintro.html) tutorial will provide an introduction to UNIX commands, utilities, and navigation tools.\n",
-    "\n",
-    "Numerous other Linux/UNIX tutorials exist, feel free to post your favorite in the #bfx_workshop slack channel.\n"
+    "* [This](https://becker.wustl.edu/civicrm/?civiwp=CiviCRM&q=civicrm%2Fevent%2Finfo&reset=1&id=402) virtual workshop is offered in collaboration with WUIT's Research Infrastructure Services (RIS) and will introduce the Unix command line interface, the Unix file system, and basic Unix commands. \n",
+    "    * Attendees will learn to create, explore and manage Unix folders and files.\n",
+    "* [This](https://www.linkedin.com/learning/unix-for-mac-os-x-users) video tutorial should be easy to follow along on a macOS.\n",
+    "    * Although several years old and designed for Max OS X, not much has changed with Unix.\n",
+    "    * LinkedIn Learning is Free to all WUSTL faculty, students and staff. \n",
+    "* For traditional users, the classic look and feel of [this](http://www.ee.surrey.ac.uk/Teaching/Unix/unixintro.html) tutorial will provide an introduction to UNIX commands, utilities, and navigation tools.\n",
+    "* Numerous other Linux/UNIX tutorials exist, feel free to post your favorite in the #bfx_workshop slack channel.\n"
    ]
   },
   {
@@ -30,7 +32,9 @@
    "source": [
     "## Software you'll need to have installed:\n",
     "\n",
-    "NOTE: There are numerous ways to install Python, R, Notebooks, etc. In fact, you will see various ways of installing software and configuring your environment throughout the workshop. Each presenter and/or software toolkit may require or suggest a different approach. The following installs are a minimum list of steps to both load, execute, and edit the Jupyter Notebooks used for sharing material and instructions used throughout this workshop."
+    "NOTE: There are numerous ways to install Python, R, Notebooks, etc. In fact, you will see various ways of installing software and configuring your environment throughout the workshop. Each presenter and/or software toolkit may require or suggest a different approach. The following installs are a minimum list of steps to both load, execute, and edit the Jupyter Notebooks used for sharing material and instructions used throughout this workshop.\n",
+    "\n",
+    "[This](https://becker.wustl.edu/civicrm/?civiwp=CiviCRM&q=civicrm%2Fevent%2Finfo&reset=1&id=403) virtual workshop is offered in collaboration with WUIT's Research Infrastructure Services (RIS). The workshop will introduce text editors, shell and batch scripts, Docker container technology, and the ssh protocol. Attendees will learn how to write, edit and run shell scripts, how to create a simple Docker container, and how to connect to the RIS compute cluster."
    ]
   },
   {
@@ -71,7 +75,7 @@
     "python -V\n",
     "```\n",
     "\n",
-    "As of September 9th, 2020, the base conda python version is 3.8.3, see the example image below:\n",
+    "As of September 7th, 2021, the base conda python version is 3.8.11, see the example image below:\n",
     "![Example Python Version](https://raw.githubusercontent.com/genome/bfx_workshop/master/archive/images/python_version.png)\n"
    ]
   },
@@ -306,10 +310,9 @@
     "\n",
     "Prerequisites:\n",
     "\n",
-    "- Compute1/Storage1 access:\n",
-    " - https://docs.ris.wustl.edu/\n",
-    "- Basic understanding of the command line and how to submit jobs to the cluster\n",
-    " - https://confluence.ris.wustl.edu/display/ITKB/Workshops+and+Training\n"
+    "* Compute1/Storage1 access:\n",
+    "    * https://docs.ris.wustl.edu/\n",
+    "* [This](https://becker.wustl.edu/civicrm/?civiwp=CiviCRM&q=civicrm%2Fevent%2Finfo&reset=1&id=404) virtual workshop is offered in collaboration with WUIT's Research Infrastructure Services (RIS) and will introduce  basic commands for submitting jobs on RIS compute cluster. Attendees will learn how to submit jobs to RIS compute cluster’s queuing system as well as interactively, using Docker.\n"
    ]
   },
   {
@@ -344,7 +347,7 @@
     "###  LSF and Docker information\n",
     "\n",
     "Working through this [LSF and Docker tutorial](https://gist.github.com/chrisamiller/4b17a8dd310374f078da2bf12b3e2a49) might prove useful in conjunction with this week's homework."
-     ]
+   ]
   },
   {
    "cell_type": "markdown",
@@ -376,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
