Add git resource and update RIS links.

--- a/lectures/week_01/bfx_workshop_01_overview.ipynb
+++ b/lectures/week_01/bfx_workshop_01_overview.ipynb
@@ -132,6 +132,8 @@
     "```\n",
     "git --version\n",
     "```\n",
+    "#### Additional Git Resources\n",
+    "* Linkedin Learning [Learning Git and Github](https://www.linkedin.com/learning-login/share?account=57884865&forceAccount=false&redirect=https%3A%2F%2Fwww.linkedin.com%2Flearning%2Flearning-git-and-github-14213624%3Ftrk%3Dshare_ent_url%26shareId%3DBNNkL8hRQAqPOHmqiNOyZg%253D%253D)\n",
     "\n",
     "#### Git Exercise\n",
     "Let's clone the class git repository from GitHub, see [link](https://github.com/genome/bfx_workshop).\n",
@@ -308,10 +310,10 @@
     "\n",
     "The remainder of this tutorial includes resources to ensure all participants have access to a High Performance Compute (HPC) cluster.\n",
     "\n",
-    "Prerequisites:\n",
+    "HPC Prerequisites:\n",
     "\n",
-    "* Compute1/Storage1 access:\n",
-    "    * https://docs.ris.wustl.edu/\n",
+    "* The home for RIS docs supporting the compute1/storage1 environment: https://docs.ris.wustl.edu/\n",
+    "    * A complete list of RIS workshop recordings: https://docs.ris.wustl.edu/doc/compute/compute-workshops.html\n",
     "* [This](https://becker.wustl.edu/civicrm/?civiwp=CiviCRM&q=civicrm%2Fevent%2Finfo&reset=1&id=404) virtual workshop is offered in collaboration with WUIT's Research Infrastructure Services (RIS) and will introduce  basic commands for submitting jobs on RIS compute cluster. Attendees will learn how to submit jobs to RIS compute cluster’s queuing system as well as interactively, using Docker.\n"
    ]
   },
