typo in week1 notebook

--- a/lectures/week_01/bfx_workshop_01_overview.ipynb
+++ b/lectures/week_01/bfx_workshop_01_overview.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,6 @@
       "\u001b[34mPublic\u001b[m\u001b[m/\r\n",
       "\u001b[34mbashrc.d\u001b[m\u001b[m/\r\n",
       "\u001b[34mbd0e9f28-8708-4288-9beb-79b59a91285b\u001b[m\u001b[m/\r\n",
-      "\u001b[34mbfx-workshop\u001b[m\u001b[m/\r\n",
       "\u001b[34md293fe48-db49-41f0-8d19-1a5caa12721d\u001b[m\u001b[m/\r\n",
       "\u001b[34mf2e01a48-b2a0-4af0-8aba-8ecdc8c1293e\u001b[m\u001b[m/\r\n",
       "\u001b[34mgit\u001b[m\u001b[m/\r\n",
@@ -321,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Vitual Private Network (VPN)\n",
+    "### Virtual Private Network (VPN)\n",
     "This course will at times require access to the compute1/storage1 High Perfomance Computing & Storage solutions managed by the Research Infrastructure Services (RIS) team through WUSTL IT. In order to log into this compute environment, first one needs access to the WUSM VPN. For more information, please see the VPN section of this [link](https://it.wustl.edu/items/connect/)."
    ]
   },
