--- a/lectures/week_04/bfx_workshop_04_alignment.ipynb
+++ b/lectures/week_04/bfx_workshop_04_alignment.ipynb
@@ -434,8 +434,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "set -o pipefail\n",
-    "set -o errexit"
+    "!set -o pipefail\n",
+    "!set -o errexit"
    ]
   },
   {
@@ -546,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
