Add video link to README. Additional notes in notebook tutorial.

--- a/lectures/week_04/bfx_workshop_04_alignment.ipynb
+++ b/lectures/week_04/bfx_workshop_04_alignment.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Setup\n",
-    "Let's setup a few directories that we will use for this week's tutorial."
+    "Let's setup a few directories and explore a few software tools that we will use for this week's tutorial."
    ]
   },
   {
@@ -98,6 +98,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Picard\n",
+    "[Picard](https://broadinstitute.github.io/picard/) is a set of command line tools for manipulating high-throughput sequencing (HTS) data and formats such as SAM/BAM/CRAM and VCF."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker run -it broadinstitute/genomes-in-the-cloud:2.3.1-1512499786 java -Xms2G -jar /usr/gitc/picard.jar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Inputs\n",
     "\n",
     "We are using a toy example data set based on the HCC1395 blood normal cell line. The sequence reads and genome reference are a subset targeting chr6, genes HLA-A and HLA-B-C, and chr17, genes TP53 and BRCA1.\n",
@@ -126,7 +143,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Index"
+    "# Index\n",
+    "\n",
+    "Index files of various formats and data structures are used commonly in genomics to provide random access to specific records, locations, or content within much larger domains and coordinate spaces. Ex. entire genome nucleotide sequences, billions of sequence reads, millions of variant records, etc.\n",
+    "\n",
+    "## Samtools\n",
+    "\n",
+    "Using samtools faidx, we create an index (.fai) of the reference FASTA (.fa) which provides random access to the nucleotides at specific positions within the complete genome reference. The FAIDX index is used both by the samtools faidx command as well as other toolkits, algorithms, and libraries that require random access to specific coordinates in a timely manner.  "
    ]
   },
   {
@@ -175,6 +198,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## BWA\n",
+    "\n",
+    "BWA index will apply the correct index algorithm depending on the size of the reference provided. The index actually consists of several files and data structures that all work together (and are required) to perform alignment with subsequent alignment commands, ex. mem, aln, sampe, etc."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -196,14 +228,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Alignment"
+    "# Alignment\n",
+    "\n",
+    "Let us demonstrate the alignment two Normal HCC1395 read groups (from the same sample) using both FASTQ format files (created from our unaligned BAMs) as well as a performance improvement to align sequence reads directly from unaligned BAM to an aligned BAM in one streaming process (using pipes)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Align FASTQ"
+    "## Align from FASTQ\n",
+    "\n",
+    "Let's walk through each step of the alignment process including the conversion from unaligned BAM to compressed FASTQ."
    ]
   },
   {
@@ -213,6 +249,13 @@
    "outputs": [],
    "source": [
     "ls $PWD/unaligned/normal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `-H` flag is provided to the samtools view subcommand so we can interogate the unaligned BAM header."
    ]
   },
   {
@@ -230,14 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!docker run -v $PWD:/data -it broadinstitute/genomes-in-the-cloud:2.3.1-1512499786 /usr/local/bin/samtools view /data/unaligned/normal/2895499331.bam"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://broadinstitute.github.io/picard/explain-flags.html"
+    "Without the `-H` flag, the default behavior for the samtools view subcommand is to print each SAM record."
    ]
   },
   {
@@ -246,7 +282,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!docker run -it broadinstitute/genomes-in-the-cloud:2.3.1-1512499786 java -Xms2G -jar /usr/gitc/picard.jar"
+    "!docker run -v $PWD:/data -it broadinstitute/genomes-in-the-cloud:2.3.1-1512499786 /usr/local/bin/samtools view /data/unaligned/normal/2895499331.bam"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's look at the SAM flag in this web app to decode what values are set for the first two reads:\n",
+    "https://broadinstitute.github.io/picard/explain-flags.html\n",
+    "\n",
+    "Now, we are going to use the `SamToFastq` command from the Picard toolkit to convert our unaligned BAM file to a pair of FASTQ files (the default input to BWA)."
    ]
   },
   {
@@ -256,6 +302,13 @@
    "outputs": [],
    "source": [
     "!docker run -it broadinstitute/genomes-in-the-cloud:2.3.1-1512499786 java -Xms2G -jar /usr/gitc/picard.jar SamToFastq "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The OUTPUT_PER_RG option is used to output one pair of FASTQ (both read1 and read2 for paired-end) to the output directory of our choosing. The output compressed FASTQ files will be named based on the read group ID."
    ]
   },
   {
@@ -275,6 +328,13 @@
    "outputs": [],
    "source": [
     "ls $PWD/unaligned/normal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since the FASTQ files are compressed binary files, we can not view them as-is. As an example, we will decompress one of the read group files with gunzip. However, for an actual data set, keep the compressed binary format as-is to save space and rely on tools such as zcat, zgrep, zless, zdiff, etc. to perform basic manipulation (when necessary)."
    ]
   },
   {
@@ -323,6 +383,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The follow steps are a series of BWA mem and Samtools view commands that: \n",
+    "- align the input FASTQ files to the FASTA reference\n",
+    "- redirect the output to a SAM format file\n",
+    "- convert SAM to BAM (compressed binary) file formats"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -359,12 +429,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When working with special characters, ex. the stdout redirect `>`, best practice is to run the command when quoted to avoid interpreting those characters in the original command, ie. docker run."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "!docker run -v $PWD:/data -it broadinstitute/genomes-in-the-cloud:2.3.1-1512499786 \"/usr/gitc/bwa mem /data/ref/hla_and_brca_genes.fa /data/unaligned/normal/2895499331_1.fastq.gz /data/unaligned/normal/2895499331_2.fastq.gz > /data/aligned/normal/2895499331.sam\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also need to clarify that the command in double quotes should be passed to the bash interpreter as the command to execute. We do so by specificly executing bash (`/bin/bash`) with the `-c` argument. `-c` is documented as: \"Read and execute commands from the first non-option argument command_string, then exit.\""
    ]
   },
   {
@@ -416,7 +500,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Align Unaligned BAM"
+    "## Align from Unaligned BAM\n",
+    "\n",
+    "Let's walk through the alignment process again for another read group. This time we will \"pipe\" multiple commands together in one single streaming process from unaligned BAM to aligned BAM."
    ]
   },
   {
@@ -479,7 +565,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ## Merge Alignments"
+    " ## Merge Alignments\n",
+    " \n",
+    " Now that we have two read groupo BAMs, we want to `MergeSamFiles` (which works on BAM inputs) to produce a single BAM with all of our alignments for the Normal HCC1395 sample."
    ]
   },
   {
