Update docker images and add some additional information

--- a/lectures/week_09/python_vcf_parsing_and_filtering.ipynb
+++ b/lectures/week_09/python_vcf_parsing_and_filtering.ipynb
@@ -54,7 +54,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!docker pull mgibio/bam_readcount_helper-cwl:1.1.1"
+    "!docker pull mgibio/bam_readcount_helper-cwl:1.1.1\n",
+    "!docker pull quay.io/biocontainers/vt:0.57721--hf74b74d_1\n",
+    "!docker pull griffithlab/vatools:5.0.1"
    ]
   },
   {
@@ -245,8 +247,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!docker run -v $PWD/bfx_workshop_week_09:/data -it griffithlab/vatools:4.1.0 vcf-readcount-annotator /data/mutect.filtered.decomposed.vcf.gz /data/Exome_Tumor_Exome_Tumor_bam_readcount_snv.tsv DNA -t snv -s Exome_Tumor -o /data/mutect.filtered.decomposed.readcount_snvs.vcf.gz\n",
-    "!docker run -v $PWD/bfx_workshop_week_09:/data -it griffithlab/vatools:4.1.0 vcf-readcount-annotator /data/mutect.filtered.decomposed.readcount_snvs.vcf.gz /data/Exome_Tumor_Exome_Tumor_bam_readcount_indel.tsv DNA -s Exome_Tumor -t indel -o /data/mutect.filtered.decomposed.readcount_snvs_indel.vcf.gz"
+    "!docker run -v $PWD/bfx_workshop_week_09:/data -it griffithlab/vatools:5.0.1 vcf-readcount-annotator /data/mutect.filtered.decomposed.vcf.gz /data/Exome_Tumor_Exome_Tumor_bam_readcount_snv.tsv DNA -t snv -s Exome_Tumor -o /data/mutect.filtered.decomposed.readcount_snvs.vcf.gz\n",
+    "!docker run -v $PWD/bfx_workshop_week_09:/data -it griffithlab/vatools:5.0.1 vcf-readcount-annotator /data/mutect.filtered.decomposed.readcount_snvs.vcf.gz /data/Exome_Tumor_Exome_Tumor_bam_readcount_indel.tsv DNA -s Exome_Tumor -t indel -o /data/mutect.filtered.decomposed.readcount_snvs_indel.vcf.gz"
    ]
   },
   {
@@ -267,7 +269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[PyVCF](https://pyvcf.readthedocs.io/en/latest/) is the \"original\" Python VCF parser. It does a good job reading VCFs but doesn't support modifying VCF entries very well. It also doesn't appear to be maintained anymore. [VCFPy](https://vcfpy.readthedocs.io/en/stable/) was created to solve this problem. For that reason we'll be using VCFPy for the next tasks.\n",
+    "[PyVCF](https://pyvcf.readthedocs.io/en/latest/) is the \"original\" Python VCF parser. Unfortunately, it doesn't appear to be maintained anymore and is incompatible with newer version of setuptools, leading to installation errors. It also doesn't support modifying VCF entries very well. [VCFPy](https://vcfpy.readthedocs.io/en/stable/) was created to solve this problem. For that reason we'll be using VCFPy for the next tasks.\n",
     "\n",
     "First, we need to ensure that the `vcfpy` package is installed."
    ]
@@ -523,7 +525,7 @@
     "- pysam- samtools wrapper\n",
     "- pyyaml- work with YAML files (CWL, the language that our managed workflow are written in, is actually YAML)\n",
     "- pandas & numpy- packages for efficiently working with big data\n",
-    "- biopython- a vast collection of bioinformatics tools"
+    "- biopython- a vast collection of bioinformatics tool. Also useful for parsing and writing FASTA files."
    ]
   },
   {
