Add alternate link and make minor updates

--- a/lectures/week_09/python_vcf_parsing_and_filtering.ipynb
+++ b/lectures/week_09/python_vcf_parsing_and_filtering.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "## Setup\n",
     "\n",
-    "For this module we'll be working with a somatic exome VCF file created by the Mutect variant caller with some basic filtering already done. This VCF can be found in the `week_09` folder of the [bfx-workshop repository](https://github.com/genome/bfx-workshop). Let's create a working directory and download this file."
+    "For this module we'll be working with a somatic exome VCF file created by the Mutect variant caller with some basic filtering already done. Let's create a working directory and download this file.\n",
+    "\n",
+    "Note that some of the following dropbox links may break in the future; all files are mirrored at [box]( https://wustl.app.box.com/folder/149874570252). `wget` will not work for box links, so you will have to follow the link in your browser and download the files that way.  "
    ]
   },
   {
@@ -543,14 +545,14 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
