--- a/lectures/week_09/python_vcf_parsing_and_filtering.ipynb
+++ b/lectures/week_09/python_vcf_parsing_and_filtering.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "For this module we'll be working with a somatic exome VCF file created by the Mutect variant caller with some basic filtering already done. Let's create a working directory and download this file.\n",
     "\n",
-    "Note that some of the following dropbox links may break in the future; all files are mirrored at [box]( https://wustl.app.box.com/folder/149874570252). `wget` will not work for box links, so you will have to follow the link in your browser and download the files that way.  "
+    "Note that some of the following dropbox links may break in the future; all files are mirrored at [box](https://wustl.box.com/s/iqmr943rbsxafjtk9ekftfx42ng6nqw7). `wget` will not work for box links, so you will have to follow the link in your browser and download the files that way.  "
    ]
   },
   {
